--- a/KP_checker_and_make_dataset_cleaned.ipynb
+++ b/KP_checker_and_make_dataset_cleaned.ipynb
@@ -6,229 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# USE THIS!!\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
-    "\n",
-    "# Define the main directory containing subfolders\n",
-    "IMG_LOC = r\"C:\\Users\\avs20\\Documents\\GitHub\\facemap\\data\\schroeder_individual_folders\"\n",
-    "\n",
-    "# Get a list of all subfolders in the main folder\n",
-    "subfolders = [f.path for f in os.scandir(IMG_LOC) if f.is_dir()]\n",
-    "\n",
-    "# Loop through each subfolder\n",
-    "for subfolder in subfolders:\n",
-    "    # Get all image files in the current subfolder (filtering out non-image files)\n",
-    "    image_files = [f for f in os.listdir(subfolder) if f.endswith(('.png', '.jpg', '.jpeg', '.bmp', '.gif'))]\n",
-    "    \n",
-    "    # Check if there are images in the folder\n",
-    "    if not image_files:\n",
-    "        continue\n",
-    "    \n",
-    "    # Check for the presence of a CSV file in the subfolder\n",
-    "    csv_files = [f for f in os.listdir(subfolder) if f.endswith('.csv')]\n",
-    "    if csv_files:\n",
-    "        csv_path = os.path.join(subfolder, csv_files[0])  # Assuming one CSV per subfolder\n",
-    "        labels_o = pd.read_csv(csv_path)\n",
-    "\n",
-    "        # Process the CSV: Skip first two rows and select relevant columns\n",
-    "        labels_o = labels_o.iloc[2:, 2:]\n",
-    "        target_o = labels_o.iloc[:, 1:].values\n",
-    "        target_o = np.array(target_o, dtype=np.float32)\n",
-    "        print(f\"Processed labels for subfolder: {os.path.basename(subfolder)}\")\n",
-    "    else:\n",
-    "        print(f\"No CSV file found for subfolder: {os.path.basename(subfolder)}\")\n",
-    "        target_o = None  # Set to None if no CSV is found\n",
-    "\n",
-    "    # Calculate number of rows and columns for the subplot grid\n",
-    "    num_images = len(image_files)\n",
-    "    cols = 5  # You can adjust the number of columns\n",
-    "    rows = (num_images // cols) + (1 if num_images % cols != 0 else 0)  # Calculate rows needed\n",
-    "\n",
-    "    # Create a figure for plotting images\n",
-    "    plt.figure(figsize=(15, rows * 3))  # Adjust the figure size based on the number of rows\n",
-    "\n",
-    "    # Loop through each image in the folder and plot it\n",
-    "    for i, image_file in enumerate(image_files):\n",
-    "        # Construct the full image path\n",
-    "        image_path = os.path.join(subfolder, image_file)\n",
-    "        \n",
-    "        # Open the image\n",
-    "        img = Image.open(image_path)\n",
-    "        \n",
-    "        # Plot the image in a subplot\n",
-    "        plt.subplot(rows, cols, i + 1)\n",
-    "        plt.imshow(img)\n",
-    "        plt.axis('off')  # Turn off axis\n",
-    "        plt.title(image_file)  # Optional: You can label with the image file name or folder name\n",
-    "\n",
-    "        # If we have target_o and the index is valid, overlay the keypoints on the image\n",
-    "        if target_o is not None and i < len(target_o):\n",
-    "            label = target_o[i]\n",
-    "            # Assuming alternating x, y coordinates in the labels (e.g., x0, y0, x1, y1, ...)\n",
-    "            x_coords = label[0::2]  # Even indices (x-coordinates)\n",
-    "            y_coords = label[1::2]  # Odd indices (y-coordinates)\n",
-    "            plt.scatter(x_coords, y_coords, c=\"red\", marker=\"o\")  # Plot keypoints as red dots\n",
-    "\n",
-    "    # Set the title for the entire grid (subfolder name)\n",
-    "    plt.suptitle(f\"Images from {os.path.basename(subfolder)}\", fontsize=16)\n",
-    "    \n",
-    "    # Adjust layout and show the plot\n",
-    "    plt.tight_layout()\n",
-    "    plt.subplots_adjust(top=0.95)  # Adjust top to make room for the suptitle\n",
-    "    plt.show()\n",
-    "\n",
-    "    # If you want to do something with `target_o`, you can add it here.\n",
-    "    # For example, print the target values for each subfolder:\n",
-    "    #if target_o is not None:\n",
-    "    #    print(\"Target values (for each image in the subfolder):\")\n",
-    "    #    print(target_o)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
-    "import random\n",
-    "\n",
-    "# Define the main directory containing subfolders\n",
-    "IMG_LOC = r\"C:\\Users\\avs20\\Documents\\GitHub\\facemap\\data\\schroeder_individual_folders\"\n",
-    "\n",
-    "# Get a list of all subfolders in the main folder\n",
-    "subfolders = [f.path for f in os.scandir(IMG_LOC) if f.is_dir()]\n",
-    "\n",
-    "# Function to apply random crop and resize to 224x224\n",
-    "def random_crop_and_resize(img, keypoints, target_size=224):\n",
-    "    # Get the original image size\n",
-    "    \n",
-    "    img_width, img_height = img.size\n",
-    "    \n",
-    "    # Find the shortest side\n",
-    "    crop_size = min(img_width, img_height)\n",
-    "    \n",
-    "    # Randomly choose the top-left corner for the crop\n",
-    "    left = random.randint(0, img_width - crop_size)\n",
-    "    top = random.randint(0, img_height - crop_size)\n",
-    "    \n",
-    "    # Apply the crop\n",
-    "    img_cropped = img.crop((left, top, left + crop_size, top + crop_size))\n",
-    "    \n",
-    "    # Resize the cropped image to 224x224\n",
-    "    img_resized = img_cropped.resize((target_size, target_size))\n",
-    "    \n",
-    "    # Adjust the keypoints based on the crop and resize\n",
-    "    # Adjust for the crop (shift the keypoints by the crop's top-left corner)\n",
-    "    adjusted_keypoints = []\n",
-    "    for i in range(0, len(keypoints), 2):\n",
-    "        x = keypoints[i] - left\n",
-    "        y = keypoints[i + 1] - top\n",
-    "        adjusted_keypoints.append(x)\n",
-    "        adjusted_keypoints.append(y)\n",
-    "    \n",
-    "    # Adjust for the resizing (scale keypoints to the new image size)\n",
-    "    scale_x = target_size / crop_size\n",
-    "    scale_y = target_size / crop_size\n",
-    "    \n",
-    "    adjusted_keypoints = [\n",
-    "        adjusted_keypoints[i] * scale_x if i % 2 == 0 else adjusted_keypoints[i] * scale_y\n",
-    "        for i in range(len(adjusted_keypoints))\n",
-    "    ]\n",
-    "    \n",
-    "    return img_resized, adjusted_keypoints\n",
-    "\n",
-    "# Loop through each subfolder\n",
-    "for subfolder in subfolders:\n",
-    "    # Get all image files in the current subfolder (filtering out non-image files)\n",
-    "    image_files = [f for f in os.listdir(subfolder) if f.endswith(('.png', '.jpg', '.jpeg', '.bmp', '.gif'))]\n",
-    "    \n",
-    "    # Check if there are images in the folder\n",
-    "    if not image_files:\n",
-    "        continue\n",
-    "    \n",
-    "    # Check for the presence of a CSV file in the subfolder\n",
-    "    csv_files = [f for f in os.listdir(subfolder) if f.endswith('.csv')]\n",
-    "    if csv_files:\n",
-    "        csv_path = os.path.join(subfolder, csv_files[0])  # Assuming one CSV per subfolder\n",
-    "        labels_o = pd.read_csv(csv_path)\n",
-    "\n",
-    "        # Process the CSV: Skip first two rows and select relevant columns\n",
-    "        labels_o = labels_o.iloc[2:, 2:]\n",
-    "        target_o = labels_o.iloc[:, 1:].values\n",
-    "        target_o = np.array(target_o, dtype=np.float32)\n",
-    "        print(f\"Processed labels for subfolder: {os.path.basename(subfolder)}\")\n",
-    "    else:\n",
-    "        print(f\"No CSV file found for subfolder: {os.path.basename(subfolder)}\")\n",
-    "        target_o = None  # Set to None if no CSV is found\n",
-    "\n",
-    "    # Calculate number of rows and columns for the subplot grid\n",
-    "    num_images = len(image_files)\n",
-    "    cols = 5  # You can adjust the number of columns\n",
-    "    rows = (num_images // cols) + (1 if num_images % cols != 0 else 0)  # Calculate rows needed\n",
-    "\n",
-    "    # Create a figure for plotting images\n",
-    "    plt.figure(figsize=(15, rows * 3))  # Adjust the figure size based on the number of rows\n",
-    "\n",
-    "    # Loop through each image in the folder and plot it\n",
-    "    for i, image_file in enumerate(image_files):\n",
-    "        # Construct the full image path\n",
-    "        image_path = os.path.join(subfolder, image_file)\n",
-    "        \n",
-    "        # Open the image\n",
-    "        img = Image.open(image_path)\n",
-    "        \n",
-    "        # Get corresponding keypoints from target_o\n",
-    "        label = target_o[i] if target_o is not None else None\n",
-    "        \n",
-    "        # Apply random crop and resize the image and keypoints\n",
-    "        img_resized, adjusted_keypoints = random_crop_and_resize(img, label)\n",
-    "        \n",
-    "        # Plot the image in a subplot\n",
-    "        plt.subplot(rows, cols, i + 1)\n",
-    "        plt.imshow(img_resized)\n",
-    "        plt.axis('off')  # Turn off axis\n",
-    "        plt.title(image_file)  # Optional: You can label with the image file name or folder name\n",
-    "        \n",
-    "        # If we have keypoints, overlay them on the resized image\n",
-    "        if label is not None:\n",
-    "            x_coords = adjusted_keypoints[0::2]  # Even indices (x-coordinates)\n",
-    "            y_coords = adjusted_keypoints[1::2]  # Odd indices (y-coordinates)\n",
-    "            plt.scatter(x_coords, y_coords, c=\"red\", marker=\"o\")  # Plot keypoints as red dots\n",
-    "\n",
-    "    # Set the title for the entire grid (subfolder name)\n",
-    "    plt.suptitle(f\"Images from {os.path.basename(subfolder)}\", fontsize=16)\n",
-    "    \n",
-    "    # Adjust layout and show the plot\n",
-    "    plt.tight_layout()\n",
-    "    plt.subplots_adjust(top=0.95)  # Adjust top to make room for the suptitle\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1141, 1, 224, 224])\n",
-      "Data saved to C:\\Users\\avs20\\Documents\\GitHub\\facemap\\data\\processed_images_labels\\schroeder_test.pt\n",
-      "New keypoints saved to C:\\Users\\avs20\\Documents\\GitHub\\facemap\\data\\processed_images_labels\\labels.csv\n"
-     ]
-    }
-   ],
-   "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -326,6 +103,7 @@
     "            \n",
     "            # Open the image\n",
     "            img = Image.open(image_path)\n",
+    "            \n",
     "\n",
     "            \n",
     "            # Get corresponding keypoints from target_o\n",
@@ -353,10 +131,14 @@
     "# Save the images and labels as a .pt file\n",
     "save_path = os.path.join(output_dir, \"schroeder_test.pt\")\n",
     "print(all_images_tensor.shape)\n",
+    "\n",
+    "print(all_labels[:5])  # Print the first 5 labels to check their content\n",
+    "print(type(all_labels))  # Ensure it's a list\n",
+    "\n",
     "torch.save({\n",
     "    'images': all_images_tensor,\n",
-    "    'labels': all_labels_tensor,\n",
-    "    'filenames': all_filenames\n",
+    "    'labels': all_labels_tensor\n",
+    "#    'filenames': all_filenames\n",
     "}, save_path)\n",
     "\n",
     "print(f\"Data saved to {save_path}\")\n",
@@ -390,31 +172,36 @@
     "# Extract images, labels, and filenames from the loaded data\n",
     "images = data['images']  # Tensor of images\n",
     "labels = data['labels']  # Tensor of keypoints (shape: N x 2*K)\n",
-    "filenames = data['filenames']  # List of filenames\n",
+    "#filenames = data['filenames']  # List of filenames\n",
     "\n",
     "print(images.shape)\n",
     "print(labels.shape)\n",
     "\n",
-    "\n",
-    "# Function to visualize an image with its keypoints\n",
+    "# Function to visualize a grayscale image with its keypoints\n",
     "def visualize_image_with_keypoints(img_tensor, keypoints):\n",
-    "    # Convert the tensor image back to a PIL Image (assuming it's in [0, 1] range)\n",
-    "    img = transforms.ToPILImage()(img_tensor)\n",
-    "    \n",
+    "    # Convert the tensor image back to a numpy array (assuming it's in [0, 1] range)\n",
+    "    # Grayscale images are single-channel, so we need to handle that.\n",
+    "    if img_tensor.ndimension() == 3 and img_tensor.size(0) == 1:  # Shape: (1, H, W)\n",
+    "        img = img_tensor.squeeze(0).numpy()  # Remove channel dimension\n",
+    "    elif img_tensor.ndimension() == 2:  # Shape: (H, W)\n",
+    "        img = img_tensor.numpy()\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unexpected image dimensions: {img_tensor.shape}\")\n",
+    "\n",
     "    # Create a matplotlib figure\n",
     "    plt.figure(figsize=(6, 6))\n",
-    "    plt.imshow(img)\n",
+    "    plt.imshow(img, cmap=\"gray\")  # Use grayscale colormap\n",
     "    plt.axis('off')  # Hide axes\n",
-    "    \n",
+    "\n",
     "    # Plot the keypoints\n",
     "    if keypoints is not None:\n",
     "        # The keypoints are stored as [x1, y1, x2, y2, ..., xK, yK], so we split them\n",
     "        xs = keypoints[0::2]  # x coordinates (even indices)\n",
     "        ys = keypoints[1::2]  # y coordinates (odd indices)\n",
-    "        \n",
+    "\n",
     "        # Plot the keypoints as red circles\n",
     "        plt.scatter(xs, ys, c=\"red\", marker=\"o\")\n",
-    "    \n",
+    "\n",
     "    # Show the image\n",
     "    plt.show()\n",
     "\n",
@@ -422,9 +209,9 @@
     "for i in range(len(images)):\n",
     "    img_tensor = images[i]  # Get the image tensor\n",
     "    keypoints = labels[i].numpy()  # Get the corresponding keypoints\n",
-    "    \n",
+    "\n",
     "    # Visualize the image and keypoints\n",
-    "    print(f\"Visualizing {filenames[i]}\")\n",
+    "    #print(f\"Visualizing {filenames[i]}\")\n",
     "    visualize_image_with_keypoints(img_tensor, keypoints)\n"
    ]
   },
@@ -433,15 +220,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
+    "# put into format as raghav's make_dataset script\n",
     "\n",
     "# Define the path to the saved .pt file\n",
     "pt_file_path = r\"C:\\Users\\avs20\\Documents\\GitHub\\facemap\\data\\processed_images_labels\\schroeder_test.pt\"\n",
@@ -452,7 +232,7 @@
     "# Extract images, labels, and filenames from the loaded data\n",
     "x = data['images']  # Tensor of images\n",
     "y = data['labels']  # Tensor of keypoints (shape: N x 2*K)\n",
-    "filenames = data['filenames']  # List of filenames\n",
+    "#filenames = data['filenames']  # List of filenames\n",
     "\n",
     "print(x.shape)\n",
     "print(y.shape)\n",
@@ -470,6 +250,59 @@
     "\n",
     "print(f\"Data and labels are loaded and transformed.\\nSaved in {final_save_path}\")\n",
     "print(\"Final x shape:\", x.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make soft labels\n",
+    "\n",
+    "import pdb\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from scipy.ndimage import gaussian_filter\n",
+    "from skimage import io\n",
+    "\n",
+    "# Load data\n",
+    "x, y = torch.load(\"data/schroeder_test_224_new.pt\")\n",
+    "h, w = x[0].shape[1], x[1].shape[2]  # Image height and width\n",
+    "print(x.shape)\n",
+    "\n",
+    "# Set the sigma for Gaussian filter\n",
+    "sigma = 3  # Increase from original 3 to 5\n",
+    "\n",
+    "# Initialize the tensor for soft labels\n",
+    "softlabels = torch.zeros(x.shape)\n",
+    "\n",
+    "# Loop through each set of keypoints and generate soft labels\n",
+    "for i in range(len(y)):\n",
+    "    mask = np.zeros((h, w))  # Initialize an empty mask of zeros\n",
+    "    \n",
+    "    # Get the keypoints, remove NaNs and separate x, y coordinates\n",
+    "    y_i = y[i][~np.isnan(y[i])]\n",
+    "    idx_x, idx_y = y_i[1::2].astype(int), y_i[::2].astype(int)\n",
+    "    \n",
+    "    # Ensure indices are within bounds (0 to 223 for a 224x224 image)\n",
+    "    idx_x = np.clip(idx_x, 0, h - 1)  # Clamp x indices to be between 0 and h-1\n",
+    "    idx_y = np.clip(idx_y, 0, w - 1)  # Clamp y indices to be between 0 and w-1\n",
+    "\n",
+    "    # Mark the valid keypoints in the mask\n",
+    "    mask[idx_x, idx_y] = 1\n",
+    "    \n",
+    "    # Apply Gaussian filter to the mask to generate soft labels\n",
+    "    label = gaussian_filter(mask, sigma=sigma)\n",
+    "    \n",
+    "    # Store the soft labels in the tensor\n",
+    "    softlabels[i, 0] = torch.Tensor(label)\n",
+    "\n",
+    "# Save the data including soft labels\n",
+    "torch.save((x, y, softlabels), \"data/schroeder_test_softlabels_224.pt\")\n",
+    "\n",
+    "# Print the shape of the tensor (for debugging purposes)\n",
+    "print(x.shape)\n"
    ]
   }
  ],
